# itemeval

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  Makefile  README.md  ROADMAP.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: changelog-reminder.sh  live-smoke-gate.py  pre-push-live-smoke.sh
.claude/skills/brainstorm/: SKILL.md
.claude/skills/feature/: SKILL.md
.claude/skills/fix/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/roadmap/: SKILL.md
.claude/skills/same-change/: SKILL.md
.claude/skills/upgrade-inspect/: SKILL.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  sync-wiki.yml
configs/: quickstart_aime.yaml  usamo_demo.yaml  usamo_demo_gate.yaml  usamo_smoke.yaml
docs/: BACKLOG.md  COST-OPTIMIZATION.md  DESIGN.md  FUTURE.md  KNOWN-ISSUES.md  UX-PATTERNS.md
docs/plans/: TEMPLATE.md  cache-projection.md  cache-tail.md  cell-granular-resume.md  composite-item-id.md  dev-framework.md  endpoint-context-clamp.md  grade-solution-fingerprint.md  growth-ux.md  live-tracker.md  lock-rebless.md  model-sample-composition.md  model-sampling.md  native-batch-routing.md  output-validity-reroute.md  parallel-conditions.md  preflight-check.md  provider-finish-capture.md  recoverable-harvest.md  recovery-run-identity.md  request-timeout.md  retry-on-error.md  rubric-materialization.md  sample-exclude.md  straggler-heartbeat.md  truncation-signal.md  upgrade-automation.md  ux-compliance.md
docs/plans/archive/: cache-projection.md  cache-tail.md  cell-granular-resume.md  composite-item-id.md  endpoint-context-clamp.md  expected-cost.md  grade-solution-fingerprint.md  growth-ux.md  live-tracker.md  local-adapter.md  lock-rebless.md  metadata-in-templates.md  model-sample-composition.md  model-sampling.md  native-batch-routing.md  output-validity-reroute.md  oversized-solution-skip.md  parallel-conditions.md  preflight-check.md  provider-finish-capture.md  recoverable-harvest.md  recovery-run-identity.md  request-timeout.md  retry-on-error.md  rubric-materialization.md  sample-exclude.md  sample-output-modality.md  straggler-heartbeat.md  truncation-signal.md  upgrade-automation.md  ux-compliance.md
docs/prompts/: release.md
docs/wiki/: Agent-Guide.md  Architecture.md  Budget-and-Costs.md  CLI.md  Configuration.md  Cost-Savings.md  Error-Handling.md  FAQ.md  Getting-Started.md  Home.md  Outputs-and-Schemas.md  Pipeline-Concepts.md  Python-API.md  Tutorial-Budget-and-Scale.md  Tutorial-Experiment-Design.md  Tutorial-LLM-Judge.md  Tutorial-Second-Judge.md  Tutorial-Verifiable-Benchmark.md
prompts/solver/: minimal.md  standard.md
rubrics/: standard.md
scripts/: release_gate.py
src/itemeval/: __init__.py  _cachegate.py  _cacheprobe.py  _classify.py  _config.py  _driftcheck.py  _endpoints.py  _errors.py  _experiments.py  _harvest.py  _hints.py  _identity.py  _item.py  _manifest.py  _mockmodels.py  _modelsample.py  _preflight.py  _prepare.py  _status.py  _templates.py  _tracker.py  _util.py  cli.py
src/itemeval/_builtin/: config.yaml
src/itemeval/_builtin/prompts/solver/: standard.md
src/itemeval/_builtin/rubrics/: standard.md
src/itemeval/adapters/: __init__.py  _base.py  _hf.py  _local.py
src/itemeval/budget/: __init__.py  _endpoint_windows.py  _estimator.py  _gate.py  _policies.py  _pricing.py  _report.py  _routing.py  pricing_seed.json
src/itemeval/design/: __init__.py  _grid.py  _ids.py
src/itemeval/generate/: __init__.py  _params.py  _run.py  _task.py
src/itemeval/grade/: __init__.py  _judge.py  _materialize.py  _parse.py  _run.py  _verifiable.py
src/itemeval/report/: __init__.py  _card.py
src/itemeval/store/: __init__.py  _base.py  _export.py  _gradings.py  _items.py  _layout.py  _ledger.py  _logs.py  _materialized.py  _solutions.py
tests/: conftest.py  test_adapter_hf.py  test_adapter_hf_io.py  test_adapter_local.py  test_adapter_mapping.py  test_cache_estimate.py  test_cache_parallel.py  test_cache_scheduling.py  test_cacheprobe.py  test_classify.py  test_cli.py  test_condition_ids.py  test_config.py  test_dataset_provenance.py  test_delta_estimate.py  test_demo_configs.py  test_docs_consistency.py  test_driftcheck.py  test_endpoint_windows.py  test_endpoints.py  test_estimator.py  test_eta_levers.py  test_expected_estimate.py  test_export.py  test_generate_run.py  test_grade_metadata_render.py  test_grade_run.py  test_grid.py  test_harvest.py  test_hints.py  test_identity.py  test_import.py  test_integration_pipeline.py  test_item.py  test_judge_parse.py  test_live_smoke.py  test_local_cache_line.py  test_manifest.py  test_materialize.py  test_max_tokens_clamp.py  (+21 more)
