[project]
name = "itemeval"
version = "0.1.0.dev0"
description = "Item-level LLM evaluation over any API, with built-in budget control"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Zhimeng (Brian) Luo", email = "zhimengluo421@gmail.com" }]
requires-python = ">=3.10"
keywords = ["llm", "evaluation", "benchmark", "item-response", "inspect-ai", "psychometrics"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "inspect-ai>=0.3.239",
    "pandas>=2.3.3",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
]

[project.scripts]
itemeval = "itemeval.cli:main"

[project.urls]
Repository = "https://github.com/brianluo/itemeval"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]
