[project]
name = "itemeval"
version = "0.3.0.dev0"
description = "Item-level LLM evaluation over any API, with built-in budget control"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Zhimeng (Brian) Luo", email = "zhimengluo421@gmail.com" }]
requires-python = ">=3.11"
keywords = ["llm", "evaluation", "benchmark", "item-response", "inspect-ai", "psychometrics"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    # Lower bounds are the published support contract: the oldest version whose
    # APIs we rely on, not the latest. uv.lock pins exact (latest) versions for
    # dev/CI. itemeval uses only long-stable surfaces of pyarrow (schema/Table/
    # parquet) and datasets (load_dataset with revision), so these floors stay
    # permissive to ease co-installation; bump only when we adopt a newer API.
    "datasets>=3.0.0",
    "inspect-ai>=0.3.239",
    "pandas>=2.3.3",
    "pyarrow>=15.0.0",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
# Provider SDKs are optional, mirroring inspect_ai: it imports them lazily and
# raises a PrerequisiteError when missing. Install the extra for the provider(s)
# you run, e.g. `pip install itemeval[openai]`. The `openai` extra also covers
# OpenRouter and other OpenAI-compatible providers, which ride the OpenAI client.
# Bare names (no floors) defer the version contract to inspect_ai's requirements.
openai = ["openai"]
anthropic = ["anthropic"]
google = ["google-genai"]
all = ["openai", "anthropic", "google-genai"]

[project.scripts]
itemeval = "itemeval.cli:main"

[project.urls]
Homepage = "https://github.com/luozm/itemeval"
Repository = "https://github.com/luozm/itemeval"
Documentation = "https://github.com/luozm/itemeval/wiki"
Changelog = "https://github.com/luozm/itemeval/blob/main/CHANGELOG.md"
Issues = "https://github.com/luozm/itemeval/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["network: hits the network (HF Hub, free); deselect with -m 'not network'"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.16",
]
